--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "http": "^0.0.1-security",
-    "mysql2": "^3.3.4",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.0"
